[gd_scene load_steps=6 format=3 uid="uid://txu7gbsnc1ys"]

[ext_resource type="PackedScene" uid="uid://4ykp06og1xp2" path="res://componentes/sidebar/sidebar.tscn" id="1_3b5s4"]
[ext_resource type="Script" path="res://cenas/responderQuiz/responderQuiz.gd" id="1_uuyp6"]
[ext_resource type="FontFile" uid="uid://hoguj3iguvyo" path="res://resources/fonts/Nunito/static/Nunito-Black.ttf" id="2_kkviv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gemb4"]
bg_color = Color(0.227451, 0.258824, 0.521569, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="Theme" id="Theme_vxbck"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/font_sizes/font_size = 36
Label/fonts/font = ExtResource("2_kkviv")
Label/styles/normal = SubResource("StyleBoxFlat_gemb4")

[node name="ResponderQuiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uuyp6")

[node name="Comum" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.196094
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="Fundo" type="CanvasLayer" parent="Comum"]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Comum/Fundo"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sidebar" parent="Comum" instance=ExtResource("1_3b5s4")]
z_index = 1
layout_mode = 0

[node name="ScrollQuizzes" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.195313
anchor_top = -0.0402778
anchor_right = 0.999219
anchor_bottom = 0.995833
metadata/_edit_use_anchors_ = true

[node name="MarginQuizzes" type="MarginContainer" parent="ScrollQuizzes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 20
metadata/_edit_use_anchors_ = true

[node name="QuizzesContainer" type="HBoxContainer" parent="ScrollQuizzes/MarginQuizzes"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="RetrocederPerguntaBotao" type="Button" parent="ScrollQuizzes/MarginQuizzes/QuizzesContainer"]
z_index = 1
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "<-"

[node name="QuizRespostaMargin" type="MarginContainer" parent="ScrollQuizzes/MarginQuizzes/QuizzesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 30

[node name="QuizContainer" type="VBoxContainer" parent="ScrollQuizzes/MarginQuizzes/QuizzesContainer/QuizRespostaMargin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TempoPercorridoLabel" type="Label" parent="ScrollQuizzes/MarginQuizzes/QuizzesContainer/QuizRespostaMargin/QuizContainer"]
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_vxbck")
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Espaco" type="Label" parent="ScrollQuizzes/MarginQuizzes/QuizzesContainer/QuizRespostaMargin/QuizContainer"]
layout_mode = 2

[node name="AvancarPerguntaBotao" type="Button" parent="ScrollQuizzes/MarginQuizzes/QuizzesContainer"]
z_index = 1
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "->"

[node name="TempoPercorrido" type="Timer" parent="."]
autostart = true

[node name="Salvar" type="Button" parent="."]
layout_mode = 0
offset_left = 1224.0
offset_top = 686.0
offset_right = 1279.0
offset_bottom = 717.0
text = "salvar"
